[tool.poetry]
name = "python04-tasks"
version = "0.1.0"
description = ""
authors = ["das <das.dev@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.8.0"
aiohttp = "^3.8.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
lxml-stubs = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
